name:                RubyMarshal
version:             0.1.0.0
synopsis:            A parser for marshaled Ruby objects
description:         Please see README.md
homepage:            https://github.com/twopoint718/RubyMarshal#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Wilson
maintainer:          chris@sencjw.com
copyright:           2016 Chris Wilson
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.RubyMarshal
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , mtl
                     , hspec
  default-language:    Haskell2010

-- executable RubyMarshal
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , RubyMarshal
--   default-language:    Haskell2010

test-suite RubyMarshal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       attoparsec
                     , base
                     , bytestring
                     , containers
                     , hspec
                     , mtl
                     , QuickCheck
                     , RubyMarshal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/twopoint718/RubyMarshal
